Optimize parallel processing in RewardsService and TourGuideService; increase thread pool size for high-volume operations and ensure proper executor shutdown